# Credit-card-fraud-detection-MLOps-

./: .env  main.py  pyproject.toml
manifests/: minio.yaml
src/fraud_detection/components/: training_step.py
src/fraud_detection/storage/: base_storage.py  minio_storage_service.py
src/fraud_detection/utils/: env_loader.py
